removed warnings in unit tests